# rp2350

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  rp2350.c
app/: CMakeLists.txt  UARTCommandConsole.c
app/cli/: cli.c  cli.cpp  cli.h  cli.hpp  command.cpp
app/dap/: DAP.c  DAP.h  DAP_config.h  SW_DP.c  dapTask.c  dapTask.h
app/lcd/: lcd.cpp  lcd.hpp
components/bsp/: CMakeLists.txt  bsp.h  bspUART.c  bspUART.cpp  bspUART.h  bsp_uart.c  bsp_uart.h  util.cpp  util.h
components/freertos/: CMakeLists.txt  FreeRTOSConfig.h  hooks.c
components/log.c/: CMakeLists.txt  log.c  log.h
components/sparkfun_pico/: CMakeLists.txt  sfe_psram.h
components/st7789/: CMakeLists.txt  driver_st7789.c  driver_st7789.h  driver_st7789_font.h
main/: CMakeLists.txt  driver_st7789_interface.c  driver_st7789_interface.h  irq.c  irq.h  probe.c  probe.h  psram.h  rp2350.c  rp2350.cpp  rp2350.h  rp2350.pio  serial.c  serial.h  sw_dp_pio.c  tusb_config.h  tusb_edpt_handler.c  tusb_edpt_handler.h  usb_descriptors.c
